Fix issue where overlapping highlights are ignored

--- a/src/assets/javascripts/nested-sketch/nested-sketch.css
+++ b/src/assets/javascripts/nested-sketch/nested-sketch.css
@@ -313,16 +313,53 @@ CLOSE ALL NUTSHELLS
 }
 .highlight,
 :target {
-  animation: highlight-fade 1.75s ease-in;
+  position: relative;
   background-color: transparent;
 }
 
-@keyframes highlight-fade {
+.highlight::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffde39;
+  z-index: -1;
+
+  animation: fade-highlight 1.75s ease-in forwards;
+  will-change: opacity;
+}
+
+:target:not(.highlight)::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffde39;
+  z-index: -1;
+
+  animation: fade-target 1.75s ease-in forwards;
+  will-change: opacity;
+}
+
+@keyframes fade-highlight {
   0% {
-    background-color: #ffde39;
+    opacity: 1;
   }
   100% {
-    background-color: transparent;
+    opacity: 0;
+  }
+}
+
+@keyframes fade-target {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
 
